--- a/resources/views/pages/about.edge
+++ b/resources/views/pages/about.edge
@@ -7,10 +7,17 @@
     <script src="{{ asset('assets/app-BX0J_vn-.js') }}"></script>
     <title>
       AdonisJS - A fully featured web framework for Node.js
-    </title>    
+    </title>
   </head>
   <body>
     @include('pages/partials/nav')
-    <h1>Welcome to the FCM System</h1>    
+    <h1>{{ title }}</h1>
+    <p>
+      FCMs capture the salient aspects of a role, the knowledge and skills needed to perform in it, and the interdependencies among roles within a Function.
+      FCMs are designed to be practitioner-friendly, with a focus on simplicity and utility.
+    </p>
+    <p>
+      For more information, visit the <a href="https://orgcap.co">official website</a>.
+    </p>
   </body>
 </html>
